install-meta (0.1.29) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 29 Jul 2007 18:14:06 +0200

install-meta (0.1.28) unstable; urgency=low

  * Firmware for iwlwifi has a new package name.

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 29 Jul 2007 18:05:59 +0200

install-meta (0.1.27) unstable; urgency=low

  [ Horst Tritremmel ]
  * updated Non_free-Games.bm

  [ Joaquim Boura ]
  * Firmware for iwlwifi has a new package name.

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 29 Jul 2007 18:04:42 +0200

install-meta (0.1.26) unstable; urgency=low

  * openoffice.org-hyphenation-hr to Language-Croatian_OpenOffice.bm added

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 13 Jul 2007 08:57:10 +0200

install-meta (0.1.25) unstable; urgency=low

  * move to automake1.10.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jul 2007 01:27:39 +0200

install-meta (0.1.24) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * Education-3_to_10_years.bm and Education-10_to_99_years.bm shouldn't be
    executable.

  [ Horst Tritremmel ]
  * Fix in apt-cache show line
  * Older computer packages update

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 27 Jun 2007 16:43:24 +0200

install-meta (0.1.23) unstable; urgency=low

  * Games packages update 

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 26 Jun 2007 16:30:33 +0200

install-meta (0.1.22) unstable; urgency=low

  * Metapackage Education update

 -- Horst Tritremmel <hjt@sidux.com>  Sun, 24 Jun 2007 23:06:11 +0200

install-meta (0.1.21) unstable; urgency=low

  * show only firmwarepackages if install-gui starts install-meta 

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 20 Jun 2007 12:21:59 +0200

install-meta (0.1.20) unstable; urgency=low

  * Add debian menu entry. Build-Depend on imagemagick.

 -- Kel Modderman <kel@otaku42.de>  Sat, 16 Jun 2007 09:39:05 +1000

install-meta (0.1.19) unstable; urgency=low

  * Polish language packages added
