@@ -378,23 +378,6 @@ or use   --dir=&lt;dir&gt;
       <property name="visible">True</property>
 
       <child>
-	<widget class="GtkImage" id="image8">
-	  <property name="width_request">241</property>
-	  <property name="height_request">33</property>
-	  <property name="visible">True</property>
-	  <property name="pixbuf">install-meta-title.png</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-	<packing>
-	  <property name="x">528</property>
-	  <property name="y">0</property>
-	</packing>
-      </child>
-
-      <child>
 	<widget class="GtkNotebook" id="notebook1">
 	  <property name="width_request">764</property>
 	  <property name="height_request">466</property>
@@ -742,9 +725,11 @@ sidux contains &lt;b&gt;only dfsg free software&lt;/b&gt;, so you may want to ad
 
 You can add contrib and non-free sources with the button &lt;b&gt;&quot;Install non-free&quot;&lt;/b&gt;. This will add more metapackages.
 
-see non-free category &lt;/span&gt; 
+see non-free category in the metapackages list &lt;/span&gt; 
 
-&lt;span foreground=&quot;Red&quot; font_desc=&quot;12&quot;&gt;firmware needs non-free&lt;/span&gt;</property>
+&lt;span foreground=&quot;Red&quot; font_desc=&quot;12&quot;&gt;&lt;b&gt;firmware&lt;/b&gt; needs non-free&lt;/span&gt;
+
+&lt;span foreground=&quot;Darkblue&quot; font_desc=&quot;12&quot;&gt;you can also try &lt;b&gt;&lt;i&gt;&quot;smxi&quot;&lt;/i&gt; script&lt;/b&gt; for non free&lt;/span&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1018,7 +1003,7 @@ see non-free category &lt;/span&gt;
 	  <child>
 	    <widget class="GtkLabel" id="label17">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">&lt;b&gt;&lt;span color=&quot;SkyBlue4&quot;&gt;non-free sources&lt;/span&gt;&lt;/b&gt;</property>
+	      <property name="label" translatable="yes">&lt;b&gt;&lt;span color=&quot;Red&quot;&gt;non-free sources&lt;/span&gt;&lt;/b&gt;</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1049,7 +1034,7 @@ see non-free category &lt;/span&gt;
 	  <property name="width_request">734</property>
 	  <property name="height_request">30</property>
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;span foreground=&quot;darkgreen&quot; font_desc=&quot;12&quot;&gt;To use this feature, make sure you are connected to the internet.&lt;/span&gt;</property>
+	  <property name="label" translatable="yes">&lt;span font_desc=&quot;Bold 12&quot;&gt;To use this feature, make sure you are connected to the internet!&lt;/span&gt;</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">True</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1075,7 +1060,7 @@ see non-free category &lt;/span&gt;
 	  <property name="width_request">518</property>
 	  <property name="height_request">30</property>
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;span foreground=&quot;SkyBlue4&quot; font_desc=&quot;14&quot;&gt;Install additional metapackages&lt;/span&gt;</property>
+	  <property name="label" translatable="yes">&lt;span foreground=&quot;#A4A58B&quot; font_desc=&quot;Bold 14&quot;&gt;Install additional metapackages&lt;/span&gt;</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">True</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1092,6 +1077,23 @@ see non-free category &lt;/span&gt;
 	</widget>
 	<packing>
 	  <property name="x">8</property>
+	  <property name="y">0</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkImage" id="image8">
+	  <property name="width_request">160</property>
+	  <property name="height_request">62</property>
+	  <property name="visible">True</property>
+	  <property name="pixbuf">install-meta-title.png</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+	<packing>
+	  <property name="x">568</property>
 	  <property name="y">0</property>
 	</packing>
       </child>
