@@ -1,8 +1,13 @@
 install-meta (0.1.29) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 29 Jul 2007 18:14:06 +0200
+  [ Horst Tritremmel ]
+  * Must_have_for_older_computers updated
+  * sidux logo replaced
+
+ -- Horst Tritremmel <hjt@sidux.com>  Fri, 03 Aug 2007 09:05:45 +0200
 
 install-meta (0.1.28) unstable; urgency=low
 
